update demo threshold to be 0.1mm threshold not 0.2mm

--- a/plot_results_demo.ipynb
+++ b/plot_results_demo.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "29dfa866",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7a80c3e7",
    "metadata": {},
    "outputs": [],
@@ -60,14 +60,15 @@
     "output_path = \"results/\" # path to save the plots\n",
     "v_data = v # name of the v object\n",
     "pooling_methods = c('none', 'net')\n",
-    "motion_method_t = \"threshold2\" # motion method for one-sample t-tests\n",
+    "motion_method_t = \"threshold\" # motion method for one-sample t-tests\n",
+    "# NOTE: \"threshold\" refers to 0.1mm threshold, use \"threshold2\" for 0.2mm threshold\n",
     "motion_method_not_t = \"regression\" # motion method for other tests\n",
     "save_plots = TRUE # whether to save the plots\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "e9fe501a",
    "metadata": {},
    "outputs": [
@@ -76,6 +77,7 @@
      "output_type": "stream",
      "text": [
       "[1] \"plotting for pooling method: none\"\n",
+      "[1] \"Creating output directory: results/pooling.none/\"\n",
       "[1] \"using motion method regression for study 1: abcd_fc_r_rest_age_months\"\n",
       "[1] \"using motion method regression for study 2: abcd_fc_r_rest_bmi\"\n",
       "[1] \"using motion method regression for study 3: abcd_fc_r_rest_cbcl_scr_syn_aggressive_t_fu1\"\n",
@@ -164,6 +166,7 @@
       "[1] \"Fitting lines for multivariate effect sizes\"\n",
       "[1] \"Fitting lines for Multivariate Effect Sizes\"\n",
       "[1] \"plotting for pooling method: net\"\n",
+      "[1] \"Creating output directory: results/pooling.net/\"\n",
       "[1] \"using motion method regression for study 1: abcd_fc_r_rest_age_months\"\n",
       "[1] \"using motion method regression for study 2: abcd_fc_r_rest_bmi\"\n",
       "[1] \"using motion method regression for study 3: abcd_fc_r_rest_cbcl_scr_syn_aggressive_t_fu1\"\n",
