General reorganization and bug fixing
Remove redundant functions; bug fixes when running fresh; encapsulate density plot; move pooling loop to demo; various fixes

--- a/plot_results_demo.ipynb
+++ b/plot_results_demo.ipynb
@@ -12,14 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "29dfa866",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# source the functions in the plot_results.R file\n",
-    "# should be saved in the same directory as this script\n",
-    "source(\"plot_results.R\")"
+    "# source plot_results.R library\n",
+    "scripts_dir <- dirname(rstudioapi::getActiveDocumentContext()$path) # in same dir\n",
+    "source(paste0(scripts_dir,\"/plot_results.R\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c1e3b54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set params\n",
+    "estimate = 'd' # only works for d currently, need to fix calculate_effex/effect_size/scripts/checker.R to work for r_sq\n",
+    "pooling_methods = c('none', 'net')\n",
+    "motion_method_t = \"threshold\" # motion method for one-sample t-tests # NOTE: \"threshold\" refers to 0.1mm threshold, use \"threshold2\" for 0.2mm threshold\n",
+    "motion_method_not_t = \"regression\" # motion method for other tests\n",
+    "get_data_from_OSF <- FALSE\n",
+    "save_plots = TRUE # whether to save the plots\n",
+    "\n",
+    "# setup dirs - can also define both directly\n",
+    "base_dir <- list.files('/Users', pattern = '^ste.*', full.names = TRUE, all.files = TRUE)\n",
+    "base_dir <- paste0(base_dir,'/Library/CloudStorage/GoogleDrive-s.noble@northeastern.edu/My Drive/Lab/Tasks-Ongoing/-K99/Effect_Size/')\n",
+    "if (!get_data_from_OSF) {\n",
+    "  data_dir <- paste0(base_dir, 'scripts/BrainEffeX_utils/inst/meta/v.RData') # user-specified - only needed if not \n",
+    "}"
    ]
   },
   {
@@ -29,46 +52,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load v data from OSF, download to local directory\n",
-    "library(osfr)\n",
-    "\n",
-    "analysis_plan <- osf_retrieve_file(\"g84tk\") %>%\n",
-    "  osf_download()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8260ddbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load the data file\n",
-    "data_path <- \"braineffex_data_09-24-25.RData\"\n",
-    "load(data_path)"
+    "# load data\n",
+    "if (get_data_from_OSF) {\n",
+    "  library(osfr)\n",
+    "  analysis_plan <- osf_retrieve_file(\"g84tk\") %>% osf_download()\n",
+    "  data_path <- \"braineffex_data_09-24-25.RData\"\n",
+    "  load(data_path)\n",
+    "} else {\n",
+    "  load(data_dir)\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a80c3e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the parameters for the plots\n",
-    "estimate = 'd' # only works for d currently, need to fix calculate_effex/effect_size/scripts/checker.R to work for r_sq\n",
-    "output_path = \"results/\" # path to save the plots\n",
-    "v_data = v # name of the v object\n",
-    "pooling_methods = c('none', 'net')\n",
-    "motion_method_t = \"threshold\" # motion method for one-sample t-tests\n",
-    "# NOTE: \"threshold\" refers to 0.1mm threshold, use \"threshold2\" for 0.2mm threshold\n",
-    "motion_method_not_t = \"regression\" # motion method for other tests\n",
-    "save_plots = TRUE # whether to save the plots\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
    "id": "e9fe501a",
    "metadata": {},
    "outputs": [
@@ -267,8 +264,13 @@
     }
    ],
    "source": [
-    "# call the function to generate the plots\n",
-    "plot_results(estimate, output_path, v_data, pooling_methods, motion_method_t, motion_method_not_t, save_plots)"
+    "# generate plots\n",
+    "for (pooling_method in pooling_methods) {\n",
+    "  print(paste0('Doing pooling method: ', pooling_method))\n",
+    "  combo_name <- paste0('pooling.', pooling_method, '.motion.',motion_method_not_t)\n",
+    "  output_basedir <- paste0(base_dir, 'manuscript/figures/plots/results/curve_fit/',combo_name,'/')  # user-defined path to save the plots\n",
+    "  plot_results(estimate, output_basedir, v, motion_method_t, motion_method_not_t, save_plots)\n",
+    "}"
    ]
   },
   {
