Clean up for pre-set paths and usability

--- a/plot_results_demo.ipynb
+++ b/plot_results_demo.ipynb
@@ -5,9 +5,23 @@
    "id": "5b138d36",
    "metadata": {},
    "source": [
-    "# Creating plots for the results manuscript\n",
+    "# Creating plots for the Effect Size Project manuscript\n",
     "### Using functions from plot_results.R script\n",
     "Authors: Hallee Shearer and Stephanie Noble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b3a898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set paths\n",
+    "print('Assuming script is in working directory and creating results in working directory.')\n",
+    "script_path <- 'plot_results.R'\n",
+    "data_path <- 'braineffex_data_09-24-25.RData' # name of file we will d/l from OSF\n",
+    "output_dir <- 'results/'"
    ]
   },
   {
@@ -17,9 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# source plot_results.R library\n",
-    "scripts_dir <- dirname(rstudioapi::getActiveDocumentContext()$path) # in same dir\n",
-    "source(paste0(scripts_dir,\"/plot_results.R\"))"
+    "# source library\n",
+    "source(script_path)"
    ]
   },
   {
@@ -33,16 +46,11 @@
     "estimate = 'd' # only works for d currently, need to fix calculate_effex/effect_size/scripts/checker.R to work for r_sq\n",
     "pooling_methods = c('none', 'net')\n",
     "motion_method_t = \"threshold\" # motion method for one-sample t-tests # NOTE: \"threshold\" refers to 0.1mm threshold, use \"threshold2\" for 0.2mm threshold\n",
+    "# TODO: ^critical - this should not be used except for multivariate one-sample t-test, and n should be updated accordingly\n",
     "motion_method_not_t = \"regression\" # motion method for other tests\n",
-    "get_data_from_OSF <- FALSE\n",
     "save_plots = TRUE # whether to save the plots\n",
-    "\n",
-    "# setup dirs - can also define both directly\n",
-    "base_dir <- list.files('/Users', pattern = '^ste.*', full.names = TRUE, all.files = TRUE)\n",
-    "base_dir <- paste0(base_dir,'/Library/CloudStorage/GoogleDrive-s.noble@northeastern.edu/My Drive/Lab/Tasks-Ongoing/-K99/Effect_Size/')\n",
-    "if (!get_data_from_OSF) {\n",
-    "  data_dir <- paste0(base_dir, 'scripts/BrainEffeX_utils/inst/meta/v.RData') # user-specified - only needed if not \n",
-    "}"
+    "get_data_from_OSF = FALSE\n",
+    "osf_file_id <- 'g84tk'"
    ]
   },
   {
@@ -55,12 +63,9 @@
     "# load data\n",
     "if (get_data_from_OSF) {\n",
     "  library(osfr)\n",
-    "  analysis_plan <- osf_retrieve_file(\"g84tk\") %>% osf_download()\n",
-    "  data_path <- \"braineffex_data_09-24-25.RData\"\n",
-    "  load(data_path)\n",
-    "} else {\n",
-    "  load(data_dir)\n",
-    "}"
+    "  analysis_plan <- osf_retrieve_file(osf_file_id) %>% osf_download()\n",
+    "}\n",
+    "load(data_path)"
    ]
   },
   {
@@ -267,9 +272,9 @@
     "# generate plots\n",
     "for (pooling_method in pooling_methods) {\n",
     "  print(paste0('Doing pooling method: ', pooling_method))\n",
-    "  combo_name <- paste0('pooling.', pooling_method, '.motion.',motion_method_not_t)\n",
-    "  output_basedir <- paste0(base_dir, 'manuscript/figures/plots/results/curve_fit/',combo_name,'/')  # user-defined path to save the plots\n",
-    "  plot_results(estimate, output_basedir, v, motion_method_t, motion_method_not_t, save_plots)\n",
+    "  combo_name <- paste0('pooling.', pooling_method, '.motion.',motion_method_not_t,'.mv.none')\n",
+    "  output_basedir <- paste0(output_dir, combo_name,'/')  # user-defined path to save the plots\n",
+    "  plot_results(estimate, output_basedir, v, motion_method_t, motion_method_not_t, combo_name, save_plots)\n",
     "}"
    ]
   },
